Updating to Beta4.1_latestWebGateway @ 8227
  ------------------------------------------------------------------------
  r8227 | cneves-x | 2010-10-05 19:25:41 +0100 (Tue, 05 Oct 2010) | 1 line

  Fixing webgateway.tempfile handling of filenames with slashes
  ------------------------------------------------------------------------
  r8155 | cneves-x | 2010-09-30 00:14:31 +0100 (Thu, 30 Sep 2010) | 1 line

  Removing doRollover on django's filelog, as it was leaving existing log file handles to the log pointing nowhere.
  ------------------------------------------------------------------------
  r8130 | cneves-x | 2010-09-27 16:03:59 +0100 (Mon, 27 Sep 2010) | 1 line

  Support for images with inverted Z/T axis to be reverted in the gateway wrapper and javascript viewer.
  ------------------------------------------------------------------------
  r8103 | cneves-x | 2010-09-20 17:37:29 +0100 (Mon, 20 Sep 2010) | 1 line

  Merging trunk -c8041 'Added an IScale implementation using Java Image Scaling'
  ------------------------------------------------------------------------

--- a/etc/omero.properties
+++ b/etc/omero.properties
@@ -227,6 +227,7 @@ versions.ice=3.3.1
 versions.ij=1.41
 versions.jakarta-oro=2.0.8
 versions.jamon=2.7
+versions.java-image-scaling=0.8.5
 versions.jsr107cache=1.0
 versions.jta=1.0.1B
 versions.jts=1.10
