--- a/components/server/ivy.xml
+++ b/components/server/ivy.xml
@@ -16,6 +16,7 @@
     <dependency name="romio" rev="${omero.version}" changing="true" conf="build->build;server->server"/>
     <dependency name="rendering" rev="${omero.version}" changing="true" conf="build->build;server->server"/>
     <dependency org="OME" name="bio-formats" rev="${versions.bio-formats}"/><!-- for DBEnumCheck -->
+    <dependency org="java-image-scaling" name="java-image-scaling" rev="${versions.java-image-scaling}"/>
     <!-- Ice -->
     <dependency org="omero" name="ice" rev="${versions.ice}"/>
     <dependency org="omero" name="ice-db" rev="${versions.ice}"/>
